# QT_QML_tasks

./: README.md
t01_gallery/: AboutPage.qml  CMakeLists.txt  HomePage.qml  Main.qml  SliderPage.qml  Splash.qml  main.cpp  resources.qrc  systeminfo.cpp  systeminfo.h
t02_calc/: CMakeLists.txt  CalcButton.qml  Config.in  Main.qml  main.cpp  qt_calculator.mk  t02_calc.mk
t03_netman/: CMakeLists.txt  Main.qml  TabEnableButton.qml  main.cpp
t03_netman/components/: BtElement.qml  WifiElement.qml
t03_netman/controllers/bt/: btcontroller.cpp  btcontroller.h
t03_netman/controllers/wifi/: wificontroller.cpp  wificontroller.h
t03_netman/pages/: BtPage.qml  WifiPage.qml
t04_ledController/: CMakeLists.txt  Config.in  Main.qml  PinController.cpp  PinController.h  main.cpp  qt_led_controller.mk  t04_ledcontroller.mk
t04_ledController/mypin/: CMakeLists.txt  mypin.cpp  mypin.h
t04_weatherReport/: CMakeLists.txt  Main.qml  main.cpp
t06_MediaPlayer/: CMakeLists.txt  Main.qml  main.cpp
